# keiba-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  keiba-ai.bat  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini  check_model.py  check_predict.py  test_milers.py  test_rt.py  test_rt2.py  test_rt3.py  test_rt4.py  test_rt5.py  test_rt_update.py
backend/alembic/: env.py
backend/alembic/versions/: 184582787968_initial_schema.py  4fd05a0334cd_add_start_time_to_races.py  781a433e2e8d_add_se_extended_fields.py  d3d69b761711_add_start_time_and_se_extension_fields.py
backend/app/: main.py
backend/app/api/: betting.py  export.py  favorites.py  health.py  horses.py  jockeys.py  predictions.py  races.py  statistics.py  tasks.py  trainers.py
backend/app/core/: config.py  database.py  jvlink_errors.py  security.py
backend/app/ml/: features.py  model.py
backend/app/models/: race.py
backend/app/schemas/: race.py
backend/app/services/: jv_importer.py  jvlink.py  (+1 more)
backend/scripts/: calc_speed_index.py  copy_import.py  daily_workflow.py  jvlink_bridge.py  optimize_filter.py  seed_dummy_data.py  sync_jvlink.py  train_model.py
backend/tests/: conftest.py  test_api_betting.py  test_api_health.py  test_api_horses.py  test_api_jockeys.py  test_api_predictions.py  test_api_races.py  test_api_statistics.py  test_features.py  test_security.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/src/: App.tsx  global.d.ts  index.css
scripts/: capture_screenshots.js  create-shortcut.vbs
(+33 files in other folders)
